Fix invisible notification icons

--- a/src/scss/recit/_navbar.scss
+++ b/src/scss/recit/_navbar.scss
@@ -30,6 +30,10 @@
     }
 
     .dropdown-menu{ right: 0; left: auto; }
+
+    .popover-region-header-actions .icon {
+        color: rgba(0,0,0,.5) !important;
+    }
 }
 
 nav.navbar {
